# sopel-senpainotice

./: README.md  setup.cfg  setup.py
sopel_senpainotice/: __init__.py
