[metadata]
name = sopel-senpainotice
version = 0.1.0
description = Silly Sopel plugin to see if senpai will notice you.
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/dgw/sopel-senpainotice
license = Eiffel Forum License, version 2
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License (EFL)
    License :: OSI Approved :: Eiffel Forum License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    sopel>=7.1,<8
    requests

[options.entry_points]
sopel.plugins =
    senpainotice = sopel_senpainotice
